--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "antd": "^3.19.5",
     "axios": "^0.19.1",
     "dva": "^2.6.0-beta.6",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-resizable": "^1.10.1"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
